Bug 427042 - Save Incremental Version/Backup does not work
Summary: Save Incremental Version/Backup does not work
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Android Android 10.x
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-27 17:56 UTC by Anna Medonosova
Modified: 2021-09-09 12:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Medonosova 2020-09-27 17:56:28 UTC
SUMMARY
In 5.0.0 39f51c6, if you try to save with 'Save Incremental Version' or 'Save Incremental Backup', the operation does not save and produces an error. It fails both for local storage and Google Drive. A normal document produces a different error than an autosave file open on startup after a crash. 

STEPS TO REPRODUCE
1. Open a document 
2. Make some changes
3. Save with 'File' -> 'Save Incremental Version' or 'Save Incremental Backup'

OBSERVED RESULT
The document is not saved. Saving a normal document says: "Cannot open file for writing. An unspecified error occured.".

Saving an autosave produces either a popup with "Couldn't save incremental version. Alternative names exhausted, try manually saving with a higher number." (for incremental version), or an error in the status bar: "Error during saving: / cannot be written to. Please save under a different name." (incremental backup).


EXPECTED RESULT
The document is saved.
Comment 1 sh_zam 2021-09-09 12:35:05 UTC
Ticket wasn't closed automatically. The bug has been fixed in https://invent.kde.org/graphics/krita/commit/ad4beb82e0463d279e88dc13b697237513e1e28d