Bugfix: Make Incremental/Backup version saving work

BUG:427042
(cherry picked from commit ad4beb82e0463d279e88dc13b697237513e1e28d)